--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.featured-cards {
+    @apply bg-blue-50 pt-6 pb-10;
+
+    h2 {
+        @apply text-3xl font-bold text-blue-500 mb-6 text-center;
+    }
+
+    >div {
+        @apply grid md:grid-cols-2 gap-6 px-4 lg:container mx-auto;
+    }
+
+    >div>div {
+        @apply grid md:grid-cols-2-auto rounded-xl shadow-md relative bg-white;
+    }
+
+    >div>div>img {
+        @apply rounded-t-xl md:rounded-tr-none md:rounded-l-xl w-full h-full object-cover aspect-[1.5/1];
+    }
+
+    >div>div>div {
+        @apply p-6;
+    }
+}
